# sm2-co-sign-client

./: .gitignore  Cargo.toml  README.md  cbindgen.toml  sm2_co_sign_ffi.h  test_ffi.c
docs/: TECH_NOTES.md  _config.yml  index.html
sm2_co_sign_cli/: Cargo.toml
sm2_co_sign_cli/src/: main.rs
sm2_co_sign_core/: Cargo.toml
sm2_co_sign_core/src/: client.rs  error.rs  lib.rs  protocol.rs  types.rs
sm2_co_sign_core/tests/: integration_test.rs
sm2_co_sign_ffi/: Cargo.toml
sm2_co_sign_ffi/src/: lib.rs
