[workspace]
members = [
    "sm2_co_sign_core",
    "sm2_co_sign_cli",
    "sm2_co_sign_ffi"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["SM2 Co-Sign Team"]
repository = "https://github.com/sm2-cosign/client"

[workspace.dependencies]
# 国密算法库
# libsm: 用于协同签名特有的椭圆曲线操作（点乘、点加等）
libsm = "0.5"
# gm-sdk-rs: 用于标准SM2签名验签、SM3哈希等（API更简洁）
gm-sdk-rs = { git = "https://github.com/kintaiW/gm-sdk-rs.git" }

# 异步运行时和网络
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
hex = "0.4"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# FFI 相关
cbindgen = "0.26"

# 测试
mockall = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
