[package]
name = "sm2_co_sign_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "sm2-cosign"
path = "src/main.rs"

[dependencies]
sm2_co_sign_core = { path = "../sm2_co_sign_core" }
tokio.workspace = true
clap.workspace = true
serde_json.workspace = true
base64.workspace = true
hex.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
