[package]
name = "sm2_co_sign_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
libsm.workspace = true
gm-sdk-rs.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
hex.workspace = true
thiserror.workspace = true
tracing.workspace = true
rand = "0.8"
num-bigint = "0.4"
num-traits = "0.2"

[dev-dependencies]
mockall.workspace = true
tokio-test = "0.4"
