[package]
name = "sm2_co_sign_ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "sm2_co_sign_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
sm2_co_sign_core = { path = "../sm2_co_sign_core" }
tokio.workspace = true
base64.workspace = true
tracing.workspace = true

[build-dependencies]
cbindgen.workspace = true
